fintech-microservices/k8s/mtls/mtls-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: fintech-app
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-gateway-ingress
  namespace: fintech-app
spec:
  selector:
    matchLabels:
      app: api-gateway
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET", "POST"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: api-gateway-to-internal
  namespace: fintech-app
spec:
  selector:
    matchLabels:
      app: auth-service
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/fintech-app/sa/default", "cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: api-gateway-to-transaction
  namespace: fintech-app
spec:
  selector:
    matchLabels:
      app: transaction-service
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/fintech-app/sa/default"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: transaction-to-fraud
  namespace: fintech-app
spec:
  selector:
    matchLabels:
      app: fraud-analytics
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/fintech-app/sa/default"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: transaction-to-account
  namespace: fintech-app
spec:
  selector:
    matchLabels:
      app: account-service
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/fintech-app/sa/default"]
